Updated HostHaven frontend